// [START declaration]
syntax="proto3";

package main;
import "google/protobuf/timestamp.proto";
// [END declaration]

// [START go_declaration]
option go_package = "/pb";
// [END go_declaration]

// [START message]

message GiatRecords{
    repeated GRecord GRecords=6;
    repeated FreezedRecord FRecords=7;

    google.protobuf.Timestamp LastUpdated=15;
}

message GRecord{
    string PreviousName=1;
    string CurrentName=2;
    string RemoteURL=3;

    google.protobuf.Timestamp LastUpdated=15;
}

message FreezedRecord{
    string BaseName=1;
    string RemoteURL=2;

    google.protobuf.Timestamp LastUpdated=15;
}
// [END message]